; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/one-true-awk/extr_lib.c_is_number.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/one-true-awk/extr_lib.c_is_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@HUGE_VAL = common dso_local global double 0.000000e+00, align 8
@ERANGE = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_number(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca double, align 8
  %5 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 0, i64* @errno, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = call double @strtod(i8* %6, i8** %5)
  store double %7, double* %4, align 8
  %8 = load i8*, i8** %5, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = icmp eq i8* %8, %9
  br i1 %10, label %19, label %11

11:                                               ; preds = %1
  %12 = load double, double* %4, align 8
  %13 = load double, double* @HUGE_VAL, align 8
  %14 = fcmp oeq double %12, %13
  br i1 %14, label %19, label %15

15:                                               ; preds = %11
  %16 = load i64, i64* @errno, align 8
  %17 = load i64, i64* @ERANGE, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %20

19:                                               ; preds = %15, %11, %1
  store i32 0, i32* %2, align 4
  br label %48

20:                                               ; preds = %15
  br label %21

21:                                               ; preds = %38, %20
  %22 = load i8*, i8** %5, align 8
  %23 = load i8, i8* %22, align 1
  %24 = sext i8 %23 to i32
  %25 = icmp eq i32 %24, 32
  br i1 %25, label %36, label %26

26:                                               ; preds = %21
  %27 = load i8*, i8** %5, align 8
  %28 = load i8, i8* %27, align 1
  %29 = sext i8 %28 to i32
  %30 = icmp eq i32 %29, 9
  br i1 %30, label %36, label %31

31:                                               ; preds = %26
  %32 = load i8*, i8** %5, align 8
  %33 = load i8, i8* %32, align 1
  %34 = sext i8 %33 to i32
  %35 = icmp eq i32 %34, 10
  br label %36

36:                                               ; preds = %31, %26, %21
  %37 = phi i1 [ true, %26 ], [ true, %21 ], [ %35, %31 ]
  br i1 %37, label %38, label %41

38:                                               ; preds = %36
  %39 = load i8*, i8** %5, align 8
  %40 = getelementptr inbounds i8, i8* %39, i32 1
  store i8* %40, i8** %5, align 8
  br label %21

41:                                               ; preds = %36
  %42 = load i8*, i8** %5, align 8
  %43 = load i8, i8* %42, align 1
  %44 = sext i8 %43 to i32
  %45 = icmp eq i32 %44, 0
  br i1 %45, label %46, label %47

46:                                               ; preds = %41
  store i32 1, i32* %2, align 4
  br label %48

47:                                               ; preds = %41
  store i32 0, i32* %2, align 4
  br label %48

48:                                               ; preds = %47, %46, %19
  %49 = load i32, i32* %2, align 4
  ret i32 %49
}

declare dso_local double @strtod(i8*, i8**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
